Translations added Mod icon added Publication versions corrected